Fix selected option visibility

--- a/default-fishschool/src/app/content/pages/components/fish-schools/fish-schools.component.scss
+++ b/default-fishschool/src/app/content/pages/components/fish-schools/fish-schools.component.scss
@@ -35,12 +35,7 @@ td.mat-cell:first-of-type, td.mat-footer-cell:first-of-type, th.mat-header-cell 
 	}
 
 	.ng-placeholder {
-		position: relative;
-		width: 100%;
-	}
-
-	.ng-select .ng-select-container .ng-value-container .ng-placeholder {
-		position: relative;
+		position: inherit;
 	}
 
 	ng-select.ng-invalid.ng-touched .ng-select-container {
